--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,6 +8,16 @@ html
     link(rel="stylesheet",href="/css/main.css")
 
   body
+
+    audio#one
+      source(src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3",type="audio/mp3")
+    audio#two
+      source(src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3",type="audio/mp3")
+    audio#three
+      source(src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3",type="audio/mp3")
+    audio#four
+      source(src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3",type="audio/mp3")
+
     .container-fluid
       .row
         a(href="#")#green.col-sm-3.box
@@ -15,3 +25,6 @@ html
       .row
         a(href="#")#yellow.col-sm-3.box
         a(href="#")#blue.col-sm-3.box
+
+script(src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous")
+script(src="/js/scripts.js")
