Refactor index and js

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -9,13 +9,13 @@ html
 
   body
 
-    audio#one
+    audio#greenSound
       source(src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3",type="audio/mp3")
-    audio#two
+    audio#redSound
       source(src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3",type="audio/mp3")
-    audio#three
+    audio#yellowSound
       source(src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3",type="audio/mp3")
-    audio#four
+    audio#blueSound
       source(src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3",type="audio/mp3")
 
     .container-fluid
