--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,19 +1,111 @@
 @import "variables";
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-  color:$random;
+  text-align: center;
+  background-color: #DDD;
+}
+
+h1{
+  font-weight: bolder;
+}
+
+.circle {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  margin: 5% auto;
+  padding-left:15px;
+
 }
 
 .box{
-  width:300px;
-  height:300px;
-  border: 2px solid black;
+  width:150px;
+  height:150px;
+  border: 10px solid black;
 }
 
-#green{background-color: green;}
+#green{
+  background-color: green;
+  border-top-left-radius: 100%;
+  border-bottom: 5px solid black;
+  border-right: 5px solid black;
+}
 
-#red{background-color: red;}
+#red{
+  background-color: red;
+  border-top-right-radius: 100%;
 
-#yellow{background-color: yellow;}
+}
 
-#blue{background-color: blue;}
+#yellow{
+  background-color: yellow;
+  border-bottom-left-radius: 100%;
+}
+
+#blue{
+  background-color: blue;
+  border-bottom-right-radius: 100%;
+  border-top: 5px solid black;
+  border-left: 5px solid black;
+}
+
+
+
+.buttons{
+  position: absolute;
+  top:25%;
+  left:25%;
+  width:50%;
+  height: 50%;
+  border-radius: 100%;
+  background-color: #DDD;
+  border: 10px solid black;
+  padding-left:15px;
+}
+
+#count{
+  padding-right: 15%;
+  margin-top: 10%;
+  color: black;
+  font-weight: bold;
+  font-size: 6.5em;
+}
+
+#controls{
+  margin-top: -25px;
+  h3{
+    margin: 1px;
+  }
+}
+
+#play{
+  margin-right: 15px;
+}
+
+#strict {
+  display: inline-block;
+  font-weight: bold;
+  margin-top: 10px;
+  position: relative;
+  padding-right: 45px;
+}
+
+#strict-alert{
+  width:10px;
+  height:10px;
+  border-radius: 100%;
+  position: absolute;
+  top: 37%;
+  left:90%;
+}
+
+.green{
+  background-color: red;
+}
