--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -38,7 +38,7 @@ html
           .col-xs-12
             button(type="button" data-toggle="button" aria-pressed="false" autocomplete="off")#strict.btn.btn-primary.myButton
               h3 Strict Mode
-              #strict-alert.green
+              #strict-alert
 
 
 
