--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,7 +25,7 @@ h1{
 
 }
 
-.box{
+.color{
   width:150px;
   height:150px;
   border: 10px solid black;
@@ -70,7 +70,7 @@ h1{
   padding-left:15px;
 }
 
-#count{
+#turn{
   padding-right: 15%;
   margin-top: 10%;
   color: black;
