--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -22,12 +22,12 @@ html
       h1 Simon Game
       .circle
         .row
-          a(href="#")#green.col-xs-6.box
-          a(href="#")#red.col-xs-6.box
-          a(href="#")#yellow.col-xs-6.box
-          a(href="#")#blue.col-xs-6.box
+          a(href="#")#green.col-xs-6.color
+          a(href="#")#red.col-xs-6.color
+          a(href="#")#yellow.col-xs-6.color
+          a(href="#")#blue.col-xs-6.color
         .buttons
-          h2#count
+          h2#turn
       #controls
         .row
           .col-xs-12
